# CppProjectBuilder

./: generate_cc_class  generate_cc_project
templates/cc/: CMakeLists.txt
templates/cc/Document/: CMakeLists.txt
templates/cc/Programs/: CMakeLists.txt  hello.cc  mainpage.md
templates/cc/cmake/modules/: FindGSLWIN32.cmake
templates/cc/include/: globals.cc  globals.hh
